# alpha2rescore

./: AGENTS.md  README.md  pyproject.toml
docs/development/alpha2rescore/: 20260513plan.md
docs/development/alphapeptms2/: 20260511design.md  20260511fix1.md  20260515_local_environment_notes.md  AGENTS.md
examples/: alphapeptms2_predict_single.py
plan/: 20260513plan.md
src/alpha2rescore/: __init__.py  alphapept_helper.py  cli.py  config.py  core.py  deeplc_module.py  features.py  io.py  logging_utils.py  peptides.py  postgres_helper.py  subprocess_utils.py
src/alpha2rescore/alphapeptms2/: __init__.py  __main__.py  constants.py  core.py  result.py  spectrum.py
src/alpha2rescore/alphapeptms2/_utils/: cli.py  peptidoform.py
src/alphapeptms2/: __init__.py  __main__.py  constants.py  core.py  result.py  spectrum.py
src/alphapeptms2/_utils/: __init__.py  cli.py  peptidoform.py
tests/: test_deeplc_module.py  test_io_and_features.py  test_peptides.py  test_postgres_helper.py
tests/alphapeptms2/: test_compat.py  test_core.py  test_peptidoform.py  test_spectrum.py
