[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha2rescore"
version = "0.1.0"
description = "Fast incremental AlphaPept+DeepLC feature generation for Percolator PIN files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=7",
  "deeplc",
  "numba",
  "numpy",
  "pandas",
  "peptdeep",
  "psycopg",
  "pydantic>=2",
  "psm_utils",
  "pyarrow",
  "pyteomics",
  "scipy",
]

[project.scripts]
alpha2rescore = "alpha2rescore.cli:main"
alphapeptms2 = "alphapeptms2.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
